--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -6,6 +6,10 @@
   text-align: center;
   font-family: 'Playfair Display', serif; }
 
+.score {
+  font-size: 10em;
+  font-weight: 700; }
+
 #board {
   background-color: green;
   color: #FFFFFF; }
