--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -9,6 +9,11 @@ $num_height: 10vh;
     font-family: 'Playfair Display', serif;
   }
 
+  .score {
+    font-size: 10em;
+    font-weight: 700;
+  }
+
 #board {
   background-color: green;
   color: #FFFFFF;
