--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -137,16 +137,32 @@ body {
     font-family: 'Playfair Display', serif;
     font-size: 2em;
   }
+  .outcome {
+    text-align: center;
+  
+    .answer-shell {
+      text-align: center;
+      width: 1.3*$num_height;
+      position: absolute;
+      right: 50%;
+      left: 50%;
+      height: 1.5*$num_height;
+    }
+    .answer{
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 6em;
+      // height: 1.7*$num_height;
+      line-height: 1.3*$num_height;
+      // margin: 0em;
+      // padding-right: 1.5em;
+    }
+  }
   .preview{
     text-align: center;
     font-family: 'Playfair Display', serif;
     font-size: 2em;
-  }
-  .answer{
-    text-align: center;
-    font-family: 'Playfair Display', serif;
-    font-size: 8em;
-    // padding-right: 1.5em;
+    padding-bottom: 1em;
   }
   .info-links {
     text-align: center;
